add view,cancel & add options

--- a/options/options.html
+++ b/options/options.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Subscription Manager Options</title>
+  <title>Subhub Options</title>
   <link rel="stylesheet" href="options.css">
 </head>
 <body>
-  <h1>Subscription Manager Options</h1>
+  <h1>Subhub Options</h1>
   <p>This is the options page content.</p>
   <script src="options.js"></script>
 </body>
