--- a/popup/popup.html
+++ b/popup/popup.html
@@ -252,10 +252,10 @@ function getSubscriptions(username) {
       subscriptionCards.innerHTML = '';
 
       console.log(data)
-      const jsonData = data; // No need to parse again
+      const jsonData = JSON.parse(data);
+
       const subscriptions = jsonData.subscriptions;
 
-      console.log(subscriptions);
       console.log('Subscriptions:', jsonData.subscriptions);
 
       // Loop through the subscription data and create cards
