--- a/popup/popup.html
+++ b/popup/popup.html
@@ -89,10 +89,26 @@
     <button id="save-subscription-btn" class="action-btn">Save</button>
   </div>
 
+  <!-- Update Subscription Form -->
+  <div id="update-subscription-form" class="form-section" style="display: none;">
+    <input type="hidden" id="update-subscription-id">
+    <input type="text" id="update-subscription-name" class="input-field" placeholder="New Vendor Name">
+    <input type="text" id="update-subscription-url" class="input-field" placeholder="New Vendor URL">
+    <input type="number" id="update-subscription-duration" class="input-field" placeholder="New Duration">
+    <button id="update-subscription-btn" class="action-btn">Update</button>
+  </div>
+
+
   <script src="popup.js"></script>
   <script>
 
+    // Define subscriptions array globally
+    var subscriptions = [];
+
+
+    // Define a variable to store the logged-in username
     var loggedInUsername;
+
     // Handle login form submission
     document.getElementById('login-form').addEventListener('submit', function (event) {
       event.preventDefault(); // Prevent form submission
@@ -253,10 +269,10 @@
           const subscriptionCards = document.getElementById('subscription-cards');
           subscriptionCards.innerHTML = '';
 
-          console.log(data)
+          // console.log(data)
           const jsonData = JSON.parse(data);
 
-          const subscriptions = jsonData.subscriptions;
+          subscriptions = jsonData.subscriptions;
 
           console.log('Subscriptions:', jsonData.subscriptions);
 
@@ -266,7 +282,6 @@
             card.classList.add('subscription-card');
 
             // Create elements for displaying subscription details
-
             const vendorNameElement = document.createElement('p');
             vendorNameElement.textContent = `Vendor Name: ${subscription.vendor_name}`;
             card.appendChild(vendorNameElement);
@@ -278,6 +293,14 @@
             const durationElement = document.createElement('p');
             durationElement.textContent = `Duration: ${subscription.duration}`;
             card.appendChild(durationElement);
+
+            // Create update button
+            const updateButton = document.createElement('button');
+            updateButton.classList.add('update-btn');
+            updateButton.textContent = 'Update';
+            updateButton.dataset.uuid = subscription.uuid;
+            console.log('Subscription ID:', subscription.uuid);
+            card.appendChild(updateButton);
 
             subscriptionCards.appendChild(card);
           });
@@ -337,55 +360,130 @@
         });
     });
 
-// Handle save subscription button click
-document.getElementById('save-subscription-btn').addEventListener('click', function (event) {
-  event.preventDefault(); // Prevent default button behavior
+    // Handle save subscription button click
+    document.getElementById('save-subscription-btn').addEventListener('click', function (event) {
+      event.preventDefault(); // Prevent default button behavior
 
-  // Get the entered subscription details
-  var subscriptionName = document.getElementById('subscription-name').value;
-  var subscriptionUrl = document.getElementById('subscription-url').value;
-  var subscriptionStartDate = document.getElementById('subscription-start-date').value;
+      // Get the entered subscription details
+      var subscriptionName = document.getElementById('subscription-name').value;
+      var subscriptionUrl = document.getElementById('subscription-url').value;
+      var subscriptionStartDate = document.getElementById('subscription-start-date').value;
 
-  // Prepare data to send to the API
-  var subscriptionData = {
-    UserName: loggedInUsername,
-    VendorName: subscriptionName,
-    VendorUrl: subscriptionUrl,
-    SubscriptionDuration: subscriptionStartDate
-  };
+      // Prepare data to send to the API
+      var subscriptionData = {
+        UserName: loggedInUsername,
+        VendorName: subscriptionName,
+        VendorUrl: subscriptionUrl,
+        SubscriptionDuration: subscriptionStartDate
+      };
 
-  // Send a POST request to the subscriptions API endpoint
-  fetch('https://7se83qeyid.execute-api.us-east-1.amazonaws.com/dev/subscriptions', {
-    method: 'POST',
-    headers: {
-      'Content-Type': 'application/json'
-    },
-    body: JSON.stringify(subscriptionData)
-  })
-    .then(response => {
-      if (response.ok) {
-        // If subscription is added successfully, display a success message
-        alert('Subscription added successfully.');
-        // Clear input fields
-        document.getElementById('subscription-name').value = '';
-        document.getElementById('subscription-url').value = '';
-        document.getElementById('subscription-start-date').value = '';
-        // Show the subscription list again
-        document.getElementById('add-subscription-form').style.display = 'none';
-        document.getElementById('subscription-list').style.display = 'block';
-        // Call getSubscriptions function with the latest username
-        getSubscriptions(loggedInUsername); // Assuming getSubscriptions function updates the subscription cards
-      } else {
-        // If subscription addition fails, display an error message
-        alert('Failed to add subscription. Please try again later.');
-      }
-    })
-    .catch(error => {
-      // Handle any errors that occur during the fetch request
-      console.error('Error:', error);
-      alert('An error occurred. Please try again later.');
+      // Send a POST request to the subscriptions API endpoint
+      fetch('https://7se83qeyid.execute-api.us-east-1.amazonaws.com/dev/subscriptions', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(subscriptionData)
+      })
+        .then(response => {
+          if (response.ok) {
+            // If subscription is added successfully, display a success message
+            alert('Subscription added successfully.');
+            // Clear input fields
+            document.getElementById('subscription-name').value = '';
+            document.getElementById('subscription-url').value = '';
+            document.getElementById('subscription-start-date').value = '';
+            // Show the subscription list again
+            document.getElementById('add-subscription-form').style.display = 'none';
+            document.getElementById('subscription-list').style.display = 'block';
+            // Call getSubscriptions function with the latest username
+            getSubscriptions(loggedInUsername); // Assuming getSubscriptions function updates the subscription cards
+          } else {
+            // If subscription addition fails, display an error message
+            alert('Failed to add subscription. Please try again later.');
+          }
+        })
+        .catch(error => {
+          // Handle any errors that occur during the fetch request
+          console.error('Error:', error);
+          alert('An error occurred. Please try again later.');
+        });
     });
-});
+
+    // Update subscription button click event
+    document.addEventListener('click', function (event) {
+      if (event.target.classList.contains('update-btn')) {
+        const subscriptionId = event.target.dataset.uuid;
+        console.log('Update subscription:', subscriptionId);
+        const subscriptionToUpdate = subscriptions.find(subscription => subscription.uuid === subscriptionId);
+
+        // Populate the form with the subscription details
+        document.getElementById('update-subscription-id').value = subscriptionId;
+        document.getElementById('update-subscription-name').value = subscriptionToUpdate.vendor_name;
+        document.getElementById('update-subscription-url').value = subscriptionToUpdate.vendor_url;
+        document.getElementById('update-subscription-duration').value = subscriptionToUpdate.duration;
+
+        // Hide all sections except the update-subscription-form
+        document.getElementById('login-section').style.display = 'none';
+        document.getElementById('register-section').style.display = 'none';
+        document.getElementById('forgot-password-section').style.display = 'none';
+        document.getElementById('verification-code-section').style.display = 'none';
+        document.getElementById('subscription-list').style.display = 'none';
+        document.getElementById('subscription-cards').style.display = 'none';
+        document.getElementById('add-subscription-form').style.display = 'none';
+        document.getElementById('update-subscription-form').style.display = 'block';
+      }
+    });
+
+
+
+    // Handle update subscription form submission
+    document.getElementById('update-subscription-btn').addEventListener('click', function (event) {
+      event.preventDefault(); // Prevent default form submission
+
+      const subscriptionId = document.getElementById('update-subscription-id').value;
+      const subscriptionName = document.getElementById('update-subscription-name').value;
+      const subscriptionUrl = document.getElementById('update-subscription-url').value;
+      const subscriptionDuration = document.getElementById('update-subscription-duration').value;
+
+      const subscriptionData = {
+        UserName: loggedInUsername,
+        VendorName: subscriptionName,
+        VendorUrl: subscriptionUrl,
+        SubscriptionDuration: subscriptionDuration
+      };
+
+      // Send a POST request to update the subscription
+      fetch(`https://7se83qeyid.execute-api.us-east-1.amazonaws.com/dev/subscriptions/update/${subscriptionId}`, {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(subscriptionData)
+      })
+        .then(response => {
+          if (response.ok) {
+            // If update is successful, display a success message
+            alert('Subscription updated successfully.');
+            // Hide the update form
+            document.getElementById('update-subscription-form').style.display = 'none';
+            // Refresh the subscription cards
+            getSubscriptions(loggedInUsername);
+          } else {
+            // If update fails, display an error message
+            alert('Failed to update subscription. Please try again later.');
+          }
+        })
+        .catch(error => {
+          // Handle any errors that occur during the fetch request
+          console.error('Error:', error);
+          alert('An error occurred. Please try again later.');
+        });
+    });
+
+
+
+
 
   </script>
 </body>
