--- a/popup/popup.html
+++ b/popup/popup.html
@@ -16,6 +16,7 @@
   </div>
 
   <!-- Login Section -->
+  <div class="bg">
   <div id="login-section" class="login-section">
     <h2>Login</h2>
     <form id="login-form">
@@ -26,6 +27,7 @@
     <p>Don't have an account? <a href="#register-section">Register</a></p>
     <p>Forgot password? <a href="#forgot-password-section">Reset</a></p>
   </div>
+</div>
 
 
   <!-- Registration Section -->
@@ -142,6 +144,8 @@
           .then(response => {
             if (response.ok) {
               loggedInUsername = username;
+              // If login is successful, hide the background with class 'bg'
+              document.querySelector('.bg').style.display = 'none';
               // If login is successful, show the subscription list and display username
               document.getElementById('login-section').style.display = 'none';
               document.getElementById('user-info').style.display = 'block';
