--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="popup.css">
 </head>
 
-<body>
+<body style="background-color: black; color: white;">
   <!-- Add a div to hold the username and logo -->
   <div id="user-info" style="display: none;">
     <p id="username-display"></p>
@@ -17,17 +17,17 @@
 
   <!-- Login Section -->
   <div class="bg">
-  <div id="login-section" class="login-section">
-    <h2>Login</h2>
-    <form id="login-form">
-      <input type="text" id="username" class="input-field" placeholder="Username">
-      <input type="password" id="password" class="input-field" placeholder="Password">
-      <button type="submit" id="login-btn">Login</button>
-    </form>
-    <p>Don't have an account? <a href="#register-section">Register</a></p>
-    <p>Forgot password? <a href="#forgot-password-section">Reset</a></p>
+    <div id="login-section" class="login-section">
+      <h2>Login</h2>
+      <form id="login-form">
+        <input type="text" id="username" class="input-field" placeholder="Username">
+        <input type="password" id="password" class="input-field" placeholder="Password">
+        <button type="submit" id="login-btn">Login</button>
+      </form>
+      <p>Don't have an account? <a href="#register-section">Register</a></p>
+      <p>Forgot password? <a href="#forgot-password-section">Reset</a></p>
+    </div>
   </div>
-</div>
 
 
   <!-- Registration Section -->
@@ -77,8 +77,8 @@
         <button class="view-btn" data-provider="netflix">View</button>
         <button class="cancel-btn" data-provider="netflix">Cancel</button>
       </li> -->
-      <!-- Amazon Prime Subscription -->
-      <!-- <li class="subscription">
+    <!-- Amazon Prime Subscription -->
+    <!-- <li class="subscription">
         <h3>Amazon Prime</h3>
         <button class="view-btn" data-provider="amazon">View</button>
         <button class="cancel-btn" data-provider="amazon">Cancel</button>
@@ -89,7 +89,7 @@
     <div class="btn-container">
       <button class="plus-button" id="add-subscription-btn">+</button>
     </div>
-    
+
   </div>
   <!-- Form to add a new subscription -->
   <div id="add-subscription-form" class="form-section" style="display: none;">
@@ -134,7 +134,6 @@
         password: password
       };
 
-      // For demonstration, let's assume any non-empty username and password combination is valid
       if (username.trim() !== '' && password.trim() !== '') {
         // Send a POST request to the API endpoint
         fetch('https://fw79wa9t2e.execute-api.us-east-1.amazonaws.com/dev/auth-signin', {
@@ -313,7 +312,7 @@
             card.appendChild(vendorURLElement);
 
             const durationElement = document.createElement('p');
-            durationElement.textContent = `Duration: ${subscription.duration}`;
+            durationElement.textContent = `Subscription Duration: ${subscription.duration} days`;
             card.appendChild(durationElement);
 
             // Create update button
@@ -323,6 +322,13 @@
             updateButton.dataset.uuid = subscription.uuid;
             console.log('Subscription ID:', subscription.uuid);
             card.appendChild(updateButton);
+
+            // Create update button
+            const deleteButton = document.createElement('button');
+            deleteButton.classList.add('delete-btn');
+            deleteButton.textContent = 'Delete';
+            deleteButton.dataset.uuid = subscription.uuid;
+            card.appendChild(deleteButton);
 
             subscriptionCards.appendChild(card);
           });
@@ -502,6 +508,41 @@
           alert('An error occurred. Please try again later.');
         });
     });
+
+
+    document.addEventListener('click', function (event) {
+      if (event.target.classList.contains('delete-btn')) {
+        const subscriptionId = event.target.dataset.uuid;
+        console.log('Delete subscription:', subscriptionId);
+        console.log('Delete subscription user name:', loggedInUsername);
+
+        if (window.confirm("Are you sure you want to delete this subscription?")) {
+          fetch(`https://7se83qeyid.execute-api.us-east-1.amazonaws.com/dev/subscriptions/${subscriptionId}/user/${loggedInUsername}`, {
+            method: 'DELETE',
+            headers: {
+              'Content-Type': 'application/json'
+            }
+          })
+            .then(response => {
+              if (response.ok) {
+                // If deletion is successful, display a success message
+                alert('Subscription deleted successfully.');
+                // Refresh the subscription cards
+                getSubscriptions(loggedInUsername);
+              } else {
+                // If deletion fails, display an error message
+                throw new Error('Failed to delete subscription.');
+              }
+            })
+            .catch(error => {
+              // Handle any errors that occur during the fetch request
+              console.error('Error:', error);
+              alert('An error occurred. Please try again later.');
+            });
+        }
+      }
+    });
+
 
 
 
