--- a/popup/manage.html
+++ b/popup/manage.html
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Landing Page</title>
+  <title>Subscription Platform</title>
   <link rel="stylesheet" href="popup.css">
 </head>
-
-<body class="landing-page-body">
-  <header>
+<body>
+  <div class="container">
     <div class="toggle-container">
       <input type="checkbox" id="mode-toggle" class="toggle">
       <label for="mode-toggle" class="slider"></label>
     </div>
-  </header>
-
-  <div class="login-button-container">
-    <button class="login-button">Login</button>
+    <h2 style="margin-top: 50px;">Manage subscriptions</h2>
+    <div id="subscriptions" class="subscription-container"></div>
   </div>
 
   <script src="popup.js"></script>
 </body>
-
 </html>
