update slider | update chart type

--- a/popup/chart.html
+++ b/popup/chart.html
@@ -30,7 +30,7 @@ var barColors = [
 ];
 
 new Chart("myChart", {
-  type: "pie",
+  type: "doughnut",
   data: {
     labels: xValues,
     datasets: [{
