--- a/popup/manage.html
+++ b/popup/manage.html
@@ -6,12 +6,19 @@
   <title>Subscription Platform</title>
   <link rel="stylesheet" href="popup.css">
 </head>
+<header class="header">
+    subhub
+    <div class="toggle-container">
+        <input type="checkbox" id="mode-toggle" class="toggle">
+        <label for="mode-toggle" class="slider"></label>
+    </div>
+</header>
 <body>
   <div class="container">
-    <div class="toggle-container">
+    <!-- <div class="toggle-container">
       <input type="checkbox" id="mode-toggle" class="toggle">
       <label for="mode-toggle" class="slider"></label>
-    </div>
+    </div> -->
     <h2 style="margin-top: 50px;">Manage subscriptions</h2>
     <div id="subscriptions" class="subscription-container"></div>
   </div>
