--- a/popup/registration.html
+++ b/popup/registration.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
+        subhub
         <div class="toggle-container">
             <input type="checkbox" id="mode-toggle" class="toggle">
             <label for="mode-toggle" class="slider"></label>
