--- a/popup/manage.html
+++ b/popup/manage.html
@@ -6,8 +6,9 @@
   <title>Subscription Platform</title>
   <link rel="stylesheet" href="popup.css">
 </head>
-<header class="header">
-    subhub
+<header class="header" style="height: 20px;">
+    <p>subhub</p>
+    <a href="./chart.html" style="text-decoration: none; color: white;"><p style="margin-left: -50px; cursor: pointer;">your spends</p></a>
     <div class="toggle-container">
         <input type="checkbox" id="mode-toggle" class="toggle">
         <label for="mode-toggle" class="slider"></label>
@@ -15,10 +16,6 @@
 </header>
 <body>
   <div class="container">
-    <!-- <div class="toggle-container">
-      <input type="checkbox" id="mode-toggle" class="toggle">
-      <label for="mode-toggle" class="slider"></label>
-    </div> -->
     <h2 style="margin-top: 50px;">Manage subscriptions</h2>
     <div id="subscriptions" class="subscription-container"></div>
   </div>
