--- a/popup/manage.html
+++ b/popup/manage.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="popup.css">
 </head>
 <header class="header" style="height: 20px;">
-    <p>subhub</p>
+    <a href="popup.html">subhub</a>
     <a href="./chart.html" style="text-decoration: none; color: white;"><p style="margin-left: -50px; cursor: pointer;">your spends</p></a>
     <div class="toggle-container">
         <input type="checkbox" id="mode-toggle" class="toggle">
