--- a/popup/popup.html
+++ b/popup/popup.html
@@ -10,12 +10,12 @@
 
 <body class="landing-page-body">
   <header class="header">
-    subhub
+    <a href="popup.html">subhub</a>
     <div class="toggle-container">
       <input type="checkbox" id="mode-toggle" class="toggle">
       <label for="mode-toggle" class="slider"></label>
     </div>
-  </header>
+</header>
 
   <div class="login-button-container">
     <button class="login-button">Login</button>
