--- a/popup/registration.html
+++ b/popup/registration.html
@@ -10,7 +10,7 @@
 
 <body>
     <header class="header">
-        subhub
+        <a href="popup.html">subhub</a>
         <div class="toggle-container">
             <input type="checkbox" id="mode-toggle" class="toggle">
             <label for="mode-toggle" class="slider"></label>
